--- a/sample/sample.html
+++ b/sample/sample.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html>
+<link rel="stylesheet" href="style.css">
 <head>
   <meta charset="UTF-8">
   <title>初めてのHTML</title>
 </head>
 <body>
 webcamp1日目！
+<p id="color-red">これは赤にしたい文章</p>
+<p>これは黒のままでいい文章</p>
 </body>
 </html>
