--- a/caravan/index.html
+++ b/caravan/index.html
@@ -6,10 +6,15 @@
 	<title>CARAVAN</title>
 </head>
 <body>
-    <div class="header">
-    	<div class="header-top"></div>
-    	<div class="header-bottom"></div>
-    </div>
+    
+    <header>
+        <h1 class="headline">
+            <a href="index.html">CARAVAN</a>
+
+        </h1>
+
+    </header>
+    
     <div class="main-visual">
     <div class="main-visual-content"></div>
     </div>
@@ -17,6 +22,7 @@
 		<div class="blog"></div>
         <div class="sidebar"></div>
 	</div>
-	<div class="footer"></div>
+    <footer></footer>
+	
 </body>
 </html>
