--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/07f593dbe7.js" crossorigin="anonymous"></script>">
 	<link rel="stylesheet" href="style.css">
 	<title>CARAVAN</title>
 </head>
@@ -12,8 +13,16 @@
         <h1 class="headline">
             <a href="index.html">CARAVAN</a>
         </h1> 
+
+        <div class="social">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-instagram"></i>
+
+        </div>
     </header>
    
+
     <nav>
         <ul class="nav-list">
             <li class="nav-list-item">
